--- a/Day1/index.html
+++ b/Day1/index.html
@@ -13,16 +13,14 @@
 
        <p>In addition to cognitive benefits, reading can also be a great source of comfort. Whether it's escaping into a fantasy world or understanding the struggles of others through biographies, books provide emotional resonance. They can reduce stress, improve empathy, and help individuals feel less alone.</p>
 
-       <p>While digital devices offer convenience, making time for <i>traditional reading</i> —whether in print or on an e-reader—can have lasting benefits. <br> In a fast-paced digital world, reading remains a quiet rebellion, a way to slow down and connect with ourselves and the world around us.</p>
+       <p>While digital devices offer <strong>convinience</strong>, making time for <i>traditional reading</i> —whether in print or on an e-reader—can have lasting benefits. <br> In a fast-paced digital world, reading remains a quiet rebellion, a way to slow down and connect with ourselves and the world around us.</p>
 
-        <img src="https://www.shutterstock.com/image-vector/vector-collection-web-development-shield-260nw-1757407322.jpg" alt="js">
-
+        <img src="https://www.shutterstock.com/image-vector/vector-collection-web-development-shield-260nw-1757407322.jpg" alt="js" height="400" width="500">
 
         <br>
         <hr>
         <i></i>
         <b></b>
-
+        
     </body>
-
 </html>
