--- a/Day4/index.html
+++ b/Day4/index.html
@@ -82,6 +82,14 @@
             font-family: monospace;
         }
     </style>
+    
+    <style>
+        .button2{
+            font-size: 10px;
+        }
+    </style>
+        <button class="fancy-btn button2">Click Me 2</button>
+
     <style>
         body { background-color: #f0f8ff; }
         h1 { color: #2a52be; }
@@ -93,7 +101,7 @@
             border: none;
             padding: 12px 32px;
             border-radius: 30px;
-            font-size: 1.1rem;
+           
             font-weight: 600;
             box-shadow: 0 4px 16px rgba(42,82,190,0.15);
             cursor: pointer;
